catcode-backend-rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
  namespace: catcode
spec:
  ports:
    - port: 5672
      targetPort: 5672
  selector:
    app: rabbitmq
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-ui
  labels:
    app: rabbitmq-ui
  namespace: catcode
spec:
  ports:
    - port: 80
      targetPort: 15672
  selector:
    app: rabbitmq
